--- a/application/modules/default/views/scripts/tasks/index.phtml
+++ b/application/modules/default/views/scripts/tasks/index.phtml
@@ -11,20 +11,13 @@
       </div>
       <!--/.subCategoryList-->
       
-      <div class="w100 productFilter clearfix">
-<!--        <p class="pull-left"> Showing <strong>12</strong> products </p>-->
+<!--      <div class="w100 productFilter clearfix">
+        <p class="pull-left"> Showing <strong>12</strong> products </p>
         <div class="pull-right ">
 
-          <div class="change-view pull-right"> 
-              <a href="#" title="Grid" class="grid-view">
-                  <i class="fa fa-th-large"></i
-              </a>
-              <a href="#" title="List" id="listView" class="list-view ">
-                  <i class="fa fa-th-list"></i>
-              </a> 
-          </div>
+          
         </div>
-      </div>
+      </div>-->
       <!--/.productFilter-->
       <div class="row  categoryProduct xsResponse clearfix">
 
@@ -49,7 +42,13 @@
                     </h4>
                 </div>
                 <div class="col-sm-4">                
-                    <h4 style="margin-top: 15px !important"> <span><?= $task['price'] ?> <?= POINT_LABEL ?></h4>
+                    <h4 style="margin-top: 15px !important"> 
+                       <?php if($task['propose_price'] == 0){?> 
+                            <?= $task['price'] ?> <?= POINT_LABEL ?>
+                       <?php }else{ ?>
+                            Цена договорная
+                       <?php } ?> 
+                    </h4>
                 </div>
                 <div class="col-sm-12"> 
                     <small>Дата исполнения: <?= date( "d.m.Y" ,$task['final_date']) ?> </small>
