--- a/application/modules/performer/views/scripts/task/performers-view.phtml
+++ b/application/modules/performer/views/scripts/task/performers-view.phtml
@@ -71,7 +71,7 @@
             </span></a>
        </li>
     <?php } ?>
-       <li role="presentation"><a href="#comments" aria-controls="comments" role="tab" data-toggle="tab">Комментарии</a></li>
+       
   </ul>
 
   <!-- Tab panes -->
@@ -92,7 +92,15 @@
 
         <div class="col-lg-12">
            <label>Стоимость : </label>
-           <?= $this->task['customers_price'] ?> бел. рублей
+            <?php if($this->task['propose_price'] == 0){?>
+                <?= $this->task['customers_price'] ?> <?= POINT_LABEL ?>
+            <?php }else{?>
+                <?php if(!$this->task['price']){?>
+                    Исполнитель предлагает цену
+                <?php }else{ ?>
+                    <?= $this->task['price'] ?> <?= POINT_LABEL ?>
+                <?php } ?>
+            <?php } ?>
         </div>
         <?php if($this->tasksFeedback){?>
 
@@ -167,45 +175,9 @@
             </div>
         </div>
         <?php } ?>
-    </div>
-      <?php if($this->task['status'] == 'taken'){?>
-    <div role="tabpanel" class="tab-pane" id="messages">
-            <div id="messagesArea" style="height: 300px; overflow-y:scroll">
-                <?php if($this->taskMessages){?>
-                <?php foreach($this->taskMessages as $message){?>
-                    <?php if($message['user_from'] == $this->currentUser->id){?>
-                        <div class="list-group list-group-item">
-                            <img src="<?= $this->baseUrl().'/images/users_images/'.$message['uf_image'] ?>" height="60" ></br>
-                             <h4 class="list-group-item-heading"><?= $this->currentUser->username ?> <?= $this->currentUser->surname ?></h4>
-                             <small><?= date("h:i d.m.Y",$message['created']) ?></small>
-                             <p class="list-group-item-text"><?= $message['text'] ?></p>
-                        </div>
-                    <?php }else{?>
-                        <div class="list-group list-group-item" style="text-align: -webkit-right;">
-                            <img src="<?= $this->baseUrl().'/images/users_images/'.$message['uf_image'] ?>" height="60" ></br>
-                             <h4 class="list-group-item-heading"><?= $message['uf_username']." ".$message['uf_surname'] ?></h4>
-                             <small><?= date("h:i d.m.Y",$message['created']) ?></small>
-                             <p class="list-group-item-text"><?= $message['text']?></p>
-                        </div>
-                    <?php } ?>
-
-                <?php }?>
-                <?php }else{?>
-                    Отправте первое сообщение
-                <?php }?>
-            </div> 
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Сообщение</label>
-                    <input type="text" id="message" class="form-control" placeholder="Текст...">
-                </div>            
-                <button id="senMessageBut" class="btn btn-primary" onclick="sendMessage(<?= $this->task['id'] ?>, <?= $this->currentUser->id ?>,<?= $this->task['performer_id'] ?>)">Послать</button>  
-                <img style="display: none" id="messagePrel" src="<?= $this->baseUrl()?>/images/blue_preloader.gif" width="50">            
-            <h3 class="block-title-3"></h3>
-    </div>
-      <?php } ?>
-            <div role="tabpanel" class="tab-pane" id="comments">
-                <?php if(!$this->comments){?>
-                   <div class="col-sm-12">
+        
+                        <?php if(!$this->comments){?>
+                   <div class="col-sm-12 color-details">
                      <div class="list-group list-group-item">
                        <h3 class="list-group-item-heading">Сообщений пока нет</h3>
                      </div>
@@ -247,11 +219,47 @@
                        <label>Сообщение</label>
                        <textarea class="form-control" id="commnetTextArea" style="width: 100%"></textarea>    
                    </div>
-                   <div class="col-sm-12">
+                   <div class="col-sm-12" style="padding-bottom: 10px">
                        <button class="btn btn-primary" id="sendCommentButton">Отправить</button>
                        <img id="sendCommentPrel" src="<?= $this->baseUrl(),'/images/blue_preloader.gif' ?>" style="display:none" width="50">
                    </div>
-            </div>
+    </div>
+      <?php if($this->task['status'] == 'taken'){?>
+    <div role="tabpanel" class="tab-pane" id="messages">
+            <div id="messagesArea" style="height: 300px; overflow-y:scroll">
+                <?php if($this->taskMessages){?>
+                <?php foreach($this->taskMessages as $message){?>
+                    <?php if($message['user_from'] == $this->currentUser->id){?>
+                        <div class="list-group list-group-item">
+                            <img src="<?= $this->baseUrl().'/images/users_images/'.$message['uf_image'] ?>" height="60" ></br>
+                             <h4 class="list-group-item-heading"><?= $this->currentUser->username ?> <?= $this->currentUser->surname ?></h4>
+                             <small><?= date("h:i d.m.Y",$message['created']) ?></small>
+                             <p class="list-group-item-text"><?= $message['text'] ?></p>
+                        </div>
+                    <?php }else{?>
+                        <div class="list-group list-group-item" style="text-align: -webkit-right;">
+                            <img src="<?= $this->baseUrl().'/images/users_images/'.$message['uf_image'] ?>" height="60" ></br>
+                             <h4 class="list-group-item-heading"><?= $message['uf_username']." ".$message['uf_surname'] ?></h4>
+                             <small><?= date("h:i d.m.Y",$message['created']) ?></small>
+                             <p class="list-group-item-text"><?= $message['text']?></p>
+                        </div>
+                    <?php } ?>
+
+                <?php }?>
+                <?php }else{?>
+                    Отправте первое сообщение
+                <?php }?>
+            </div> 
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Сообщение</label>
+                    <input type="text" id="message" class="form-control" placeholder="Текст...">
+                </div>            
+                <button id="senMessageBut" class="btn btn-primary" onclick="sendMessage(<?= $this->task['id'] ?>, <?= $this->currentUser->id ?>,<?= $this->task['performer_id'] ?>)">Послать</button>  
+                <img style="display: none" id="messagePrel" src="<?= $this->baseUrl()?>/images/blue_preloader.gif" width="50">            
+            <h3 class="block-title-3"></h3>
+    </div>
+      <?php } ?>
+
     <div role="tabpanel" class="tab-pane" id="apps">
         <?php if($this->prepositions){?>
 
@@ -326,13 +334,13 @@
                 </td>
                 <td>
                     <?php if($preposition['performers_price']){?>
-                        <?= $preposition['performers_price'] ?>
+                        <?= $preposition['performers_price'] ?> <?= POINT_LABEL ?>
                     <?php }else{?>
                         Цена заказчика
                     <?php }?>
                 </td>
                 <td>
-                    <button id="acceptBut<?= $preposition['performer_id'] ?>" class="btn btn-primary btn-sm" onclick="acceptPreposition(<?= $preposition['performer_id'] ?>, <?= $preposition['task_id'] ?>)">Принять</button>
+                    <button id="acceptBut<?= $preposition['performer_id'] ?>" class="btn btn-primary btn-sm" onclick="acceptPreposition(<?= $preposition['performer_id'] ?>, <?= $preposition['task_id'] ?>, <?= $preposition['id'] ?>)">Принять</button>
                     <img style="display: none" id="prepPrel<?= $preposition['performer_id'] ?>" src="<?= $this->baseUrl()?>/images/blue_preloader.gif" width="50">
                 </td>
             </tr>
@@ -549,14 +557,15 @@ function sendMessage(taskId, senderId, addressee){
     }
 }
 
-function acceptPreposition(performerId, taskId){
+function acceptPreposition(performerId, taskId, prepositionId){
 $('#acceptBut'+performerId).hide();
 $('#prepPrel'+performerId).show();
 $.ajax({
   type: 'POST',
   url: '<?= $this->baseUrl.'/performer/task/accept-proposition/'; ?>',
   data: {performerId: performerId,
-         taskId: taskId
+         taskId: taskId,
+         prepositionId: prepositionId
     },
   success: function(response){
       $('#prepTable').remove();
