--- a/application/modules/performer/views/scripts/task/view.phtml
+++ b/application/modules/performer/views/scripts/task/view.phtml
@@ -108,7 +108,7 @@ if (hs.addSlideshow) hs.addSlideshow({
             </a>
         </li>
     <?php } ?>
-        <li role="presentation" id="commentsTab"><a href="#comments" aria-controls="comments" role="tab" data-toggle="tab">Комментарии</a></li>
+<!--        <li role="presentation" id="commentsTab"><a href="#comments" aria-controls="comments" role="tab" data-toggle="tab">Комментарии</a></li>-->
    
   </ul>
 
@@ -128,7 +128,15 @@ if (hs.addSlideshow) hs.addSlideshow({
         <?php } ?>
         <div class="col-lg-12">
            <label>Стоимость : </label>
-           <?= $this->task['customers_price'] ?> <?= POINT_LABEL ?>
+           <?php if($this->task['propose_price'] == 0){?>
+                <?= $this->task['customers_price'] ?> <?= POINT_LABEL ?>
+           <?php }else{?>
+                <?php if(!$this->task['price']){?>
+                    Исполнитель предлагает цену
+                <?php }else{ ?>
+                    <?= $this->task['price'] ?> <?= POINT_LABEL ?>
+                <?php } ?>
+           <?php } ?>
         </div>
         <div class="col-lg-12">
            <label>Категория : </label>
@@ -304,6 +312,50 @@ if (hs.addSlideshow) hs.addSlideshow({
             </div>
         </div>
         <?php } ?>
+        
+        <?php if($this->comments){?>
+        
+          
+              <?php foreach($this->comments as $comment){?>
+              <div class="col-sm-12 color-details" >
+                 
+                    <?php if($comment['user_from'] == $this->currentUser->id){?>
+                        <div class="col-sm-3">
+                            <img src="<?= $this->baseUrl().'/images/users_images/'.$comment['u_image'] ?>" height="70">
+                        </div>
+                        <div class="col-sm-6">
+                            <h5><?= $comment['u_username'].' '.mb_substr($comment['u_surname'],0,1,'utf-8') ?></h5>
+                            <small><?= date("h:i d.m.y", $comment['created']); ?></small>
+                            <p><?= $comment['text'] ?></p>
+                        </div>
+                        <div class="col-sm-3"></div>
+                    <?php }else{?>
+                        <div class="col-sm-3"></div>
+                        <div class="col-sm-6">
+                            <h5><a href="<?= $this->baseUrl().'/customer/performes/view/id/'.$comment['u_id'] ?>"><?= $comment['u_username'] ?></a></h5>
+                            <small><?= date("h:i d.m.y", $comment['created']); ?></small>
+                            <p><?= $comment['text'] ?></p>
+                        </div>
+                        <div class="col-sm-3">
+                            <img src="<?= $this->baseUrl().'/images/users_images/'.$comment['u_image'] ?>" height="70">
+                        </div>
+                        
+                    <?php }?>
+                       
+                        </div>
+              <?php } ?> 
+       
+          <?=  $this->paginationControl($this->comments, 'Sliding', 'pagination.phtml') ?>
+          <?php } ?>
+                   <div class="col-sm-12" style="padding-bottom: 10px">
+                       <label>Сообщение</label>
+                       <textarea class="form-control" id="commnetTextArea" style="width: 100%"></textarea>    
+                   </div>
+                   <div class="col-sm-12" style="padding-bottom: 10px">
+                       <button class="btn btn-primary" id="sendCommentButton">Отправить</button>
+                       <img id="sendCommentPrel" src="<?= $this->baseUrl(),'/images/blue_preloader.gif' ?>" style="display:none" width="50">
+                   </div>
+        
     </div>
     <?php if($this->task['status'] == 'taken' && $this->currentUser->banned == 0){?>
       <div role="tabpanel" class="tab-pane" id="messages">
@@ -340,56 +392,7 @@ if (hs.addSlideshow) hs.addSlideshow({
             <h3 class="block-title-3"></h3>
       </div>
     <?php } ?>
- 
-            <div role="tabpanel" class="tab-pane" id="comments">
-                <?php if(!$this->comments){?>
-                   <div class="col-sm-12">
-                     <div class="list-group list-group-item">
-                       <h3 class="list-group-item-heading">Сообщений пока нет</h3>
-                     </div>
-                   </div>
-          <?php }else{ ?>
-          <div class="col-sm-12"> 
-              <?php foreach($this->comments as $comment){?>
-              <div class="col-sm-12" style="padding-bottom: 10px">
-                 
-                    <?php if($comment['user_from'] == $this->currentUser->id){?>
-                        <div class="col-sm-3">
-                            <img src="<?= $this->baseUrl().'/images/users_images/'.$comment['u_image'] ?>" height="70">
-                        </div>
-                        <div class="col-sm-6">
-                            <h5><?= $comment['u_username'].' '.mb_substr($comment['u_surname'],0,1,'utf-8') ?></h5>
-                            <small><?= date("h:i d.m.y", $comment['created']); ?></small>
-                            <p><?= $comment['text'] ?></p>
-                        </div>
-                        <div class="col-sm-3"></div>
-                    <?php }else{?>
-                        <div class="col-sm-3"></div>
-                        <div class="col-sm-6">
-                            <h5><a href="<?= $this->baseUrl().'/customer/performes/view/id/'.$comment['u_id'] ?>"><?= $comment['u_username'] ?></a></h5>
-                            <small><?= date("h:i d.m.y", $comment['created']); ?></small>
-                            <p><?= $comment['text'] ?></p>
-                        </div>
-                        <div class="col-sm-3">
-                            <img src="<?= $this->baseUrl().'/images/users_images/'.$comment['u_image'] ?>" height="70">
-                        </div>
-                        
-                    <?php }?>
-                       
-                        </div>
-              <?php } ?> 
-          </div>
-          <?=  $this->paginationControl($this->comments, 'Sliding', 'pagination.phtml') ?>
-          <?php } ?>
-                   <div class="col-sm-12" style="padding-bottom: 10px">
-                       <label>Сообщение</label>
-                       <textarea class="form-control" id="commnetTextArea" style="width: 100%"></textarea>    
-                   </div>
-                   <div class="col-sm-12">
-                       <button class="btn btn-primary" id="sendCommentButton">Отправить</button>
-                       <img id="sendCommentPrel" src="<?= $this->baseUrl(),'/images/blue_preloader.gif' ?>" style="display:none" width="50">
-                   </div>
-            </div>
+
       </div>
   </div>
 
@@ -480,27 +483,35 @@ if (hs.addSlideshow) hs.addSlideshow({
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Предложить стоимость</h4>
+                <h4 class="modal-title" id="myModalLabel">Подтверждение</h4>
               </div>
               <div class="modal-body">
+                  <?php if($this->task['propose_price'] == 0){?>
+                  <input type="checkbox" id="check_price" style="display: none" name="customers_check" checked value="1">
                   <p> Подтвердите свое предложение </p>
-                  <form style="display: none">
-                      
-                      <input type="hidden" id="customers_price" name="customers_price" value="<?= $this->task['customers_price'] ?>">
+                  <?php } else{?>
+                  <form >
                       <div>
-                            <input type="hidden" name="customers_check" value="0">
-                            <label>Согласиться с ценой заказчика</label>
-                            <input type="checkbox" id="check_price" name="customers_check" checked value="1">
+                          <input type="checkbox"  style="display: none" name="customers_check" checked value="0">
+                          <input type="checkbox" id="check_price" style="display: none" name="customers_check"  value="1">
                       </div>
                       <div id="priceDiv" >
                             <label>Предложить свою цену</label>
                             <input type="text" id="per_price"  name="performers_price" >
+                            <p id="price_error" class="text-danger" style="display: none">* Введите стоимость цифрами в бел. рублях без пробелов</p>
+                            <p id="price_char_error" class="text-danger" style="display: none">* Поле не должно содержать пробелов, точек и запятых</p>
+                            <p id="price_amount_error" class="text-danger" style="display: none">* Слишком большая сумма</p>
                       </div>
                   </form>
+                  <?php } ?>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
-                <button type="button" onclick="propose()" id="propBut" class="btn btn-primary">Подтвердить</button>
+                <?php if($this->task['propose_price'] == 0){?>
+                    <button type="button" onclick="propose()" id="propBut" class="btn btn-primary">Подтвердить</button>
+                <?php }else{?>
+                    <button type="button" onclick="propose()" id="propBut" disabled class="btn btn-primary">Подтвердить</button>
+                <?php } ?>
                 <img style="display: none" id="prel" src="<?= $this->baseUrl()?>/images/blue_preloader.gif" width="70">
               </div>
             </div>
@@ -526,12 +537,53 @@ if (hs.addSlideshow) hs.addSlideshow({
         </div>      
  <script>
  $(document).ready(function(){
+     
+     
+        $('#per_price').bind("keyup",function(){ 
+            $('#price_char_error').hide(); 
+            $('#price_error').hide();
+            $('#price_amount_error').hide();
+            var perPrice = $(this).val();
+            var priceNan = isNaN(perPrice);
+            var priceDot = perPrice.indexOf(".");
+            if(priceNan || priceDot != -1){
+                if(priceNan){
+                   $('#price_error').show();
+                }
+                if(priceDot != -1){
+                   $('#price_char_error').show(); 
+                }
+            }else{
+                // check for summ
+                var balance = '<?= $this->user['balance'] ?>';
+                var allowedSum = perPrice/100*10;
+                if(allowedSum <= balance){
+                    $('#price_char_error').hide(); 
+                    $('#price_amount_error').hide(); 
+                    $('#price_error').hide();
+                    $('#propBut').removeAttr("disabled");
+                }else{
+                    $('#price_char_error').hide(); 
+                    $('#price_amount_error').show(); 
+                    $('#price_error').hide();
+                    $('#propBut').attr("disabled", "true");
+                }
+                
+            }
+        });      
+     
+     
+     
+     
      $('#check_price').change(function(){
          if($(this).is(':checked')){
              $('#priceDiv').hide();
          }else{
              $('#priceDiv').show();
          }
+         
+        
+         
      });
      
     // get currrent url
@@ -565,7 +617,9 @@ if (hs.addSlideshow) hs.addSlideshow({
         
     $('#sendCommentButton').bind("click", function(){
         sendComment();
-    });        
+    });  
+    
+    
         
  });   
 
@@ -723,6 +777,7 @@ function sendMessage(taskId, senderId, addressee){
         }
         });       
      }else{
+
         var perfPrice = $('#per_price').val();
         $('#propBut').hide();
         $('#prel').show();
