checkboxes moved at the price input

--- a/application/modules/admin/views/scripts/tasks/index.phtml
+++ b/application/modules/admin/views/scripts/tasks/index.phtml
@@ -24,7 +24,7 @@
 <?php foreach($this->taskList as $task){?>
      <tr id="div<?= $task['id'] ?>">
          <td>
-             <?= date("d.m.y", $task['created_at']); ?>
+             <?= date("Y.m.d H:i", $task['created_at']); ?>
          </td>
        <td>
            <a href="<?= $this->baseUrl().'/admin/tasks/view/id/'.$task['id']?>">
