--- a/application/modules/customer/views/scripts/performers/performer-view.phtml
+++ b/application/modules/customer/views/scripts/performers/performer-view.phtml
@@ -391,10 +391,10 @@
                     
             <?php foreach($this->feedbacks as $feedback){?>
             <div class="row block-title-custom">
-                <div class="col-sm-1">
+                <div class="col-sm-1 col-xs-3">
                     <img class="img-thumbnail" width="100%" src="<?= $this->baseUrl().'/images/users_images/'.$feedback['u_image'] ?>">
                 </div>    
-                <div class="col-sm-11">
+                <div class="col-sm-11col-xs-9">
                     <b><?= $feedback['u_username'].' '.mb_substr($feedback['u_surname'],0,1,'utf-8').'.' ?></b>
                     <small style="color: #c9c1c1">
                     <?php if((int)$this->currentUserId == $feedback['t_customer_id']){?>
@@ -414,7 +414,7 @@
                     <p>
                         <?= $feedback['text'] ?>
                     </p>
-                    <small class="col-sm-4">
+                    <small class="col-sm-4 ">
                         Качество: 
                         <ul class="swatches Color">
                         <?php switch ($this->mainRating['quality']){
@@ -465,7 +465,7 @@
                         <?php }?>
                       </ul>
                     </small>
-                    <small class="col-sm-4">
+                    <small class="col-sm-4 ">
                         Пунктуальность: 
                         <ul class="swatches Color">
                         <?php switch ($this->mainRating['punctuality']){
@@ -516,7 +516,7 @@
                         <?php }?>
                       </ul>
                     </small>
-                    <small class="col-sm-4">
+                    <small class="col-sm-4 ">
                         Вежливость: 
                         <ul class="swatches Color">
                         <?php switch ($this->mainRating['politeness']){
